--- a/templates/hr_dashboard.html
+++ b/templates/hr_dashboard.html
@@ -20,7 +20,7 @@
                     <a class="nav-link text-white" href="#members">
                         <i class="fas fa-users me-2"></i>Members
                     </a>
-                    <a class="nav-link text-white" href="#attendance">
+                    <a class="nav-link text-white" href="{{ url_for('attendance_page') }}">
                         <i class="fas fa-calendar-check me-2"></i>Attendance
                     </a>
                     <a class="nav-link text-white" href="#points">
