--- a/templates/invite_codes.html
+++ b/templates/invite_codes.html
@@ -23,7 +23,7 @@
                     <a class="nav-link text-white active" href="{{ url_for('invite_codes') }}">
                         <i class="fas fa-ticket-alt me-2"></i>Invite Codes
                     </a>
-                    <a class="nav-link text-white" href="{{ url_for('admin_dashboard') }}#attendance">
+                    <a class="nav-link text-white" href="{{ url_for('attendance_page') }}">
                         <i class="fas fa-calendar-check me-2"></i>Attendance
                     </a>
                     <a class="nav-link text-white" href="{{ url_for('admin_dashboard') }}#points">
